Lab1/y.output
Grammar

    0 $accept: program $end

    1 program: tokens

    2 tokens: tokens token
    3       | %empty

    4 token: TOKEN_BOOL
    5      | TOKEN_BVEC2
    6      | TOKEN_BVEC3
    7      | TOKEN_BVEC4
    8      | TOKEN_INT
    9      | TOKEN_IVEC3
   10      | TOKEN_IVEC2
   11      | TOKEN_IVEC4
   12      | TOKEN_VEC2
   13      | TOKEN_FLOAT
   14      | TOKEN_VEC4
   15      | TOKEN_VEC3
   16      | TOKEN_IDENTIFIER
   17      | TOKEN_INTEGER_VAL
   18      | TOKEN_LIT
   19      | TOKEN_VARIABLE
   20      | TOKEN_RSQ
   21      | TOKEN_DP3
   22      | TOKEN_WHILE
   23      | TOKEN_ELSE
   24      | TOKEN_TRUE
   25      | TOKEN_IF
   26      | TOKEN_FALSE
   27      | TOKEN_PLUS
   28      | TOKEN_MINUS
   29      | TOKEN_DIV
   30      | TOKEN_MUL
   31      | TOKEN_EXP
   32      | TOKEN_NOT
   33      | TOKEN_OR
   34      | TOKEN_AND
   35      | TOKEN_EQUAL
   36      | TOKEN_NOT_EQUAL
   37      | TOKEN_LTHAN
   38      | TOKEN_LTHAN_EQUAL
   39      | TOKEN_GTHAN
   40      | TOKEN_GTHAN_EQUAL
   41      | TOKEN_CONST
   42      | TOKEN_FLOAT_VAL
   43      | TOKEN_ASSIGN
   44      | TOKEN_EOL
   45      | TOKEN_VOID
   46      | TOKEN_OPEN_SB
   47      | TOKEN_CLOSE_SB
   48      | TOKEN_OPEN_CB
   49      | TOKEN_CLOSE_CB
   50      | TOKEN_CLOSE_SQB
   51      | TOKEN_OPEN_SQB
   52      | TOKEN_COMMA


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_BOOL (258) 4
TOKEN_BVEC2 (259) 5
TOKEN_BVEC3 (260) 6
TOKEN_BVEC4 (261) 7
TOKEN_INT (262) 8
TOKEN_IVEC2 (263) 10
TOKEN_IVEC3 (264) 9
TOKEN_IVEC4 (265) 11
TOKEN_FLOAT (266) 13
TOKEN_VEC2 (267) 12
TOKEN_VEC3 (268) 15
TOKEN_VEC4 (269) 14
TOKEN_VARIABLE (270) 19
TOKEN_INTEGER_VAL (271) 17
TOKEN_IDENTIFIER (272) 16
TOKEN_LIT (273) 18
TOKEN_RSQ (274) 20
TOKEN_DP3 (275) 21
TOKEN_IF (276) 25
TOKEN_ELSE (277) 23
TOKEN_WHILE (278) 22
TOKEN_TRUE (279) 24
TOKEN_FALSE (280) 26
TOKEN_PLUS (281) 27
TOKEN_MINUS (282) 28
TOKEN_MUL (283) 30
TOKEN_DIV (284) 29
TOKEN_EXP (285) 31
TOKEN_NOT (286) 32
TOKEN_AND (287) 34
TOKEN_OR (288) 33
TOKEN_EQUAL (289) 35
TOKEN_NOT_EQUAL (290) 36
TOKEN_LTHAN (291) 37
TOKEN_LTHAN_EQUAL (292) 38
TOKEN_GTHAN (293) 39
TOKEN_GTHAN_EQUAL (294) 40
TOKEN_CONST (295) 41
TOKEN_FLOAT_VAL (296) 42
TOKEN_ASSIGN (297) 43
TOKEN_VOID (298) 45
TOKEN_EOL (299) 44
TOKEN_OPEN_SB (300) 46
TOKEN_CLOSE_SB (301) 47
TOKEN_OPEN_CB (302) 48
TOKEN_CLOSE_CB (303) 49
TOKEN_OPEN_SQB (304) 51
TOKEN_CLOSE_SQB (305) 50
TOKEN_COMMA (306) 52


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
tokens (54)
    on left: 2 3, on right: 1 2
token (55)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52, on right: 2


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (tokens)

    program  go to state 1
    tokens   go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: tokens .
    2 tokens: tokens . token

    TOKEN_BOOL         shift, and go to state 4
    TOKEN_BVEC2        shift, and go to state 5
    TOKEN_BVEC3        shift, and go to state 6
    TOKEN_BVEC4        shift, and go to state 7
    TOKEN_INT          shift, and go to state 8
    TOKEN_IVEC2        shift, and go to state 9
    TOKEN_IVEC3        shift, and go to state 10
    TOKEN_IVEC4        shift, and go to state 11
    TOKEN_FLOAT        shift, and go to state 12
    TOKEN_VEC2         shift, and go to state 13
    TOKEN_VEC3         shift, and go to state 14
    TOKEN_VEC4         shift, and go to state 15
    TOKEN_VARIABLE     shift, and go to state 16
    TOKEN_INTEGER_VAL  shift, and go to state 17
    TOKEN_IDENTIFIER   shift, and go to state 18
    TOKEN_LIT          shift, and go to state 19
    TOKEN_RSQ          shift, and go to state 20
    TOKEN_DP3          shift, and go to state 21
    TOKEN_IF           shift, and go to state 22
    TOKEN_ELSE         shift, and go to state 23
    TOKEN_WHILE        shift, and go to state 24
    TOKEN_TRUE         shift, and go to state 25
    TOKEN_FALSE        shift, and go to state 26
    TOKEN_PLUS         shift, and go to state 27
    TOKEN_MINUS        shift, and go to state 28
    TOKEN_MUL          shift, and go to state 29
    TOKEN_DIV          shift, and go to state 30
    TOKEN_EXP          shift, and go to state 31
    TOKEN_NOT          shift, and go to state 32
    TOKEN_AND          shift, and go to state 33
    TOKEN_OR           shift, and go to state 34
    TOKEN_EQUAL        shift, and go to state 35
    TOKEN_NOT_EQUAL    shift, and go to state 36
    TOKEN_LTHAN        shift, and go to state 37
    TOKEN_LTHAN_EQUAL  shift, and go to state 38
    TOKEN_GTHAN        shift, and go to state 39
    TOKEN_GTHAN_EQUAL  shift, and go to state 40
    TOKEN_CONST        shift, and go to state 41
    TOKEN_FLOAT_VAL    shift, and go to state 42
    TOKEN_ASSIGN       shift, and go to state 43
    TOKEN_VOID         shift, and go to state 44
    TOKEN_EOL          shift, and go to state 45
    TOKEN_OPEN_SB      shift, and go to state 46
    TOKEN_CLOSE_SB     shift, and go to state 47
    TOKEN_OPEN_CB      shift, and go to state 48
    TOKEN_CLOSE_CB     shift, and go to state 49
    TOKEN_OPEN_SQB     shift, and go to state 50
    TOKEN_CLOSE_SQB    shift, and go to state 51
    TOKEN_COMMA        shift, and go to state 52

    $default  reduce using rule 1 (program)

    token  go to state 53


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 token: TOKEN_BOOL .

    $default  reduce using rule 4 (token)


State 5

    5 token: TOKEN_BVEC2 .

    $default  reduce using rule 5 (token)


State 6

    6 token: TOKEN_BVEC3 .

    $default  reduce using rule 6 (token)


State 7

    7 token: TOKEN_BVEC4 .

    $default  reduce using rule 7 (token)


State 8

    8 token: TOKEN_INT .

    $default  reduce using rule 8 (token)


State 9

   10 token: TOKEN_IVEC2 .

    $default  reduce using rule 10 (token)


State 10

    9 token: TOKEN_IVEC3 .

    $default  reduce using rule 9 (token)


State 11

   11 token: TOKEN_IVEC4 .

    $default  reduce using rule 11 (token)


State 12

   13 token: TOKEN_FLOAT .

    $default  reduce using rule 13 (token)


State 13

   12 token: TOKEN_VEC2 .

    $default  reduce using rule 12 (token)


State 14

   15 token: TOKEN_VEC3 .

    $default  reduce using rule 15 (token)


State 15

   14 token: TOKEN_VEC4 .

    $default  reduce using rule 14 (token)


State 16

   19 token: TOKEN_VARIABLE .

    $default  reduce using rule 19 (token)


State 17

   17 token: TOKEN_INTEGER_VAL .

    $default  reduce using rule 17 (token)


State 18

   16 token: TOKEN_IDENTIFIER .

    $default  reduce using rule 16 (token)


State 19

   18 token: TOKEN_LIT .

    $default  reduce using rule 18 (token)


State 20

   20 token: TOKEN_RSQ .

    $default  reduce using rule 20 (token)


State 21

   21 token: TOKEN_DP3 .

    $default  reduce using rule 21 (token)


State 22

   25 token: TOKEN_IF .

    $default  reduce using rule 25 (token)


State 23

   23 token: TOKEN_ELSE .

    $default  reduce using rule 23 (token)


State 24

   22 token: TOKEN_WHILE .

    $default  reduce using rule 22 (token)


State 25

   24 token: TOKEN_TRUE .

    $default  reduce using rule 24 (token)


State 26

   26 token: TOKEN_FALSE .

    $default  reduce using rule 26 (token)


State 27

   27 token: TOKEN_PLUS .

    $default  reduce using rule 27 (token)


State 28

   28 token: TOKEN_MINUS .

    $default  reduce using rule 28 (token)


State 29

   30 token: TOKEN_MUL .

    $default  reduce using rule 30 (token)


State 30

   29 token: TOKEN_DIV .

    $default  reduce using rule 29 (token)


State 31

   31 token: TOKEN_EXP .

    $default  reduce using rule 31 (token)


State 32

   32 token: TOKEN_NOT .

    $default  reduce using rule 32 (token)


State 33

   34 token: TOKEN_AND .

    $default  reduce using rule 34 (token)


State 34

   33 token: TOKEN_OR .

    $default  reduce using rule 33 (token)


State 35

   35 token: TOKEN_EQUAL .

    $default  reduce using rule 35 (token)


State 36

   36 token: TOKEN_NOT_EQUAL .

    $default  reduce using rule 36 (token)


State 37

   37 token: TOKEN_LTHAN .

    $default  reduce using rule 37 (token)


State 38

   38 token: TOKEN_LTHAN_EQUAL .

    $default  reduce using rule 38 (token)


State 39

   39 token: TOKEN_GTHAN .

    $default  reduce using rule 39 (token)


State 40

   40 token: TOKEN_GTHAN_EQUAL .

    $default  reduce using rule 40 (token)


State 41

   41 token: TOKEN_CONST .

    $default  reduce using rule 41 (token)


State 42

   42 token: TOKEN_FLOAT_VAL .

    $default  reduce using rule 42 (token)


State 43

   43 token: TOKEN_ASSIGN .

    $default  reduce using rule 43 (token)


State 44

   45 token: TOKEN_VOID .

    $default  reduce using rule 45 (token)


State 45

   44 token: TOKEN_EOL .

    $default  reduce using rule 44 (token)


State 46

   46 token: TOKEN_OPEN_SB .

    $default  reduce using rule 46 (token)


State 47

   47 token: TOKEN_CLOSE_SB .

    $default  reduce using rule 47 (token)


State 48

   48 token: TOKEN_OPEN_CB .

    $default  reduce using rule 48 (token)


State 49

   49 token: TOKEN_CLOSE_CB .

    $default  reduce using rule 49 (token)


State 50

   51 token: TOKEN_OPEN_SQB .

    $default  reduce using rule 51 (token)


State 51

   50 token: TOKEN_CLOSE_SQB .

    $default  reduce using rule 50 (token)


State 52

   52 token: TOKEN_COMMA .

    $default  reduce using rule 52 (token)


State 53

    2 tokens: tokens token .

    $default  reduce using rule 2 (tokens)
